--- a/week2/index.html
+++ b/week2/index.html
@@ -18,81 +18,78 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
     crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.0.0/cropper.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <style>
+    #td-wrapper {
+      width:100vw;height:100vh;background-color: white; z-index: 800; position:fixed;top:0;left:0;
+      }
+    #emoji {
+      width:40vw;
+      height:100vh;
+      font-size: 6rem;
+
+
+      position: absolute;
+      top: 44%;
+      left: 2%;
+    }
+    #td-text {
+      position: absolute;
+      top: 44%;
+      left: 40%;
+      font-size: 3em;
+      text-align: center;
+      width: 55vw;
+    }
+    #toast-container{display: none;}
+
+    /* #webcam{display:block;width:30vw;} */
+  </style>
 </head>
 
 <body>
+  <div id="td-wrapper">
+    <div id="emoji">&nbsp;( ͡° ͜ʖ ͡°)</div>
+    <!--(¬‿¬)-->
+    <div id="td-text"></div>
+  </div>
   <!-- sticky footer -->
   <div class="wrapper">
     <!-- nav bar -->
-    <nav class="red accent-4" role="navigation">
+    <!-- <nav class="red accent-4" role="navigation">
       <div id="head-container" class="nav-wrapper container">
         <a id="logo-container" href="https://tupleblog.github.io/face-classification-js" class="">face-classification-js</a>
       </div>
-    </nav>
+    </nav> -->
 
     <!-- main container -->
-    <div id="main-container" class="container">
+    <div class="container">
       <br />
-      <!-- uploader -->
-      <div class="row">
-        <div class="col s0 m3"></div>
-        <div class="col s12 m6">
-          <p>Select your photo</p>
-          <div class="file-field input-field">
-            <div class="btn  light-blue darken-2">
-              <span>Select photo</span>
-              <input type="file" id="local_file">
-              <i class="material-icons right">add_a_photo</i>
-            </div>
-            <div class="file-path-wrapper">
-              <input class="file-path validate" type="text">
-            </div>
-          </div>
-        </div>
-        <div class="col s0 m3"></div>
-      </div>
-
-      <!-- uploader -->
-      <div class="row">
-        <div class="col s0 m3"></div>
-        <div class="col s12 m6">
-          <div class="input-field">
-            <input id="input_url" type="text" placeholder=" ">
-            <label for="input_url">or pasting image URL</label>
-          </div>
-        </div>
-        <div class="col s12 m1"><button id="btn-share" class="waves-effect waves-light btn light-blue darken-2">Share</button></div>
-        <div class="col s0 m2"></div>
-      </div>
-
-
-      <div id="image-loading" class="row" style="text-align: center; display: none;">
-        <div class="preloader-wrapper active small">
-          <div class="spinner-layer spinner-red-only">
-            <div class="circle-clipper left">
-              <div class="circle"></div>
-            </div><div class="gap-patch">
-              <div class="circle"></div>
-            </div><div class="circle-clipper right">
-              <div class="circle"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col s12 m3"><button id="btn-manual" class="waves-effect waves-light btn light-blue darken-2">Manual crop</button></div>
-      </div>
 
       <!-- image viewer -->
       <div class="row" id="card-item-container">
         <div class="col s12 m6">
           <div class="card">
             <div id="image-container" class="card-content">
+              <video id="webcam" preload autoplay loop muted></video>
+              <canvas id="canvas_webcam"></canvas>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6">
+          <div class="card">
+            <div id="result-container" class="card-content">
+
+              <div class="chart-result-profile-webcam" style="display: block; text-align: center;">
+                <canvas id="face_profile_chart" width="64" height="64"></canvas>
+                <canvas id="face_profile_greyscale" width="64" height="64" style="display: none;"></canvas>
+              </div>
               <div>
-                <img id="show-img" src="" crossOrigin="Anonymous" />
+                <canvas id="chart_emotion"></canvas>
+              </div>
+              <div>
+                <canvas id="chart_gender"></canvas>
               </div>
             </div>
           </div>
@@ -104,7 +101,7 @@
     <div class="push"></div>
   </div>
 
-  <footer class="footer red accent-4 flex-container">
+  <!-- <footer class="footer red accent-4 flex-container">
     <div class="footer-copyright">
       <div class="flex-item">
         Made with
@@ -115,26 +112,36 @@
           <i class="fab fa-github"></i> face-classification-js</a>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- UI scripts -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <!-- tf -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.9"></script>
-
   <!-- utils -->
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/pako/1.0.6/pako.min.js"></script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/data/face-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.19.0/sweetalert2.all.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.0.0/cropper.min.js"></script>
 
   <script src="js/util.js"></script>
   <script src="js/model_emotion.js"></script>
   <script src="js/model_gender.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/webcam.js"></script>
+
+  <script type="text/javascript">
+
+  </script>
+  <style>
+    #card-item-container {
+      visibility: visible;
+    }
+
+    #image-container {
+      position: relative;
+    }
+  </style>
 </body>
 
 </html>
