--- a/week3/index.html
+++ b/week3/index.html
@@ -31,7 +31,7 @@
   <h1>Style Transfer Mirror Example using ml5.js and p5.js</h1>
   <p id='status'>Loading model...</p>
 
-  <p>Style Source: <a target="_blank" href="https://en.wikipedia.org/wiki/Dwelling_in_the_Fuchun_Mountains">Vagabond - Takehiko Inoue </a></p>
+  <p>Style Source: Vagabond - Takehiko Inoue</p>
   <img src="images/vagabond.jpg" />
   <div id="canvasContainer"></div>
 </body>
